@@ -1,8 +1,8 @@
-/* $Id: minissdp.c,v 1.94 2019/02/10 12:01:19 nanard Exp $ */
+/* $Id: minissdp.c,v 1.96 2019/05/02 17:21:22 nanard Exp $ */
 /* vim: tabstop=4 shiftwidth=4 noexpandtab
  * MiniUPnP project
  * http://miniupnp.free.fr/ or https://miniupnp.tuxfamily.org/
- * (c) 2006-2018 Thomas Bernard
+ * (c) 2006-2019 Thomas Bernard
  * This software is subject to the conditions detailed
  * in the LICENCE file provided within the distribution */
 
@@ -65,33 +65,29 @@ AddMulticastMembership(int s, struct lan_addr_s * lan_addr)
 	struct ip_mreqn imr;	/* Ip multicast membership */
 #endif	/* HAVE_IP_MREQN */
 
-    /* setting up imr structure */
-    imr.imr_multiaddr.s_addr = inet_addr(SSDP_MCAST_ADDR);
-    /*imr.imr_interface.s_addr = htonl(INADDR_ANY);*/
+	/* setting up imr structure */
+	imr.imr_multiaddr.s_addr = inet_addr(SSDP_MCAST_ADDR);
+	/*imr.imr_interface.s_addr = htonl(INADDR_ANY);*/
 #ifndef HAVE_IP_MREQN
 	imr.imr_interface.s_addr = lan_addr->addr.s_addr;
 #else	/* HAVE_IP_MREQN */
-    imr.imr_address.s_addr = lan_addr->addr.s_addr;
+	imr.imr_address.s_addr = lan_addr->addr.s_addr;
 #ifndef MULTIPLE_EXTERNAL_IP
 #ifdef ENABLE_IPV6
 	imr.imr_ifindex = lan_addr->index;
 #else	/* ENABLE_IPV6 */
-    imr.imr_ifindex = if_nametoindex(lan_addr->ifname);
+	imr.imr_ifindex = if_nametoindex(lan_addr->ifname);
 #endif	/* ENABLE_IPV6 */
 #else	/* MULTIPLE_EXTERNAL_IP */
-    imr.imr_ifindex = 0;
+	imr.imr_ifindex = 0;
 #endif	/* MULTIPLE_EXTERNAL_IP */
 #endif	/* HAVE_IP_MREQN */
 
-#ifndef HAVE_IP_MREQN
-	if (setsockopt(s, IPPROTO_IP, IP_ADD_MEMBERSHIP, (void *)&imr, sizeof(struct ip_mreq)) < 0)
-#else	/* HAVE_IP_MREQN */
-	if (setsockopt(s, IPPROTO_IP, IP_ADD_MEMBERSHIP, (void *)&imr, sizeof(struct ip_mreqn)) < 0)
-#endif	/* HAVE_IP_MREQN */
+	if (setsockopt(s, IPPROTO_IP, IP_ADD_MEMBERSHIP, (void *)&imr, sizeof(imr)) < 0)
 	{
-        syslog(LOG_ERR, "setsockopt(udp, IP_ADD_MEMBERSHIP): %m");
+		syslog(LOG_ERR, "setsockopt(udp, IP_ADD_MEMBERSHIP): %m");
 		return -1;
-    }
+	}
 
 	return 0;
 }
@@ -289,7 +285,7 @@ OpenAndConfSSDPReceiveSocket(int ipv6)
 /* open the UDP socket used to send SSDP notifications to
  * the multicast group reserved for them */
 static int
-OpenAndConfSSDPNotifySocket(in_addr_t addr)
+OpenAndConfSSDPNotifySocket(struct lan_addr_s * lan_addr)
 {
 	int s;
 	unsigned char loopchar = 0;
@@ -298,7 +294,11 @@ OpenAndConfSSDPNotifySocket(in_addr_t addr)
 		The TTL for the IP packet SHOULD default to 2 and
 		SHOULD be configurable. */
 	/* TODO: Make TTL be configurable */
+#ifndef HAVE_IP_MREQN
 	struct in_addr mc_if;
+#else	/* HAVE_IP_MREQN */
+	struct ip_mreqn mc_if;
+#endif	/* HAVE_IP_MREQN */
 	struct sockaddr_in sockname;
 
 	if( (s = socket(PF_INET, SOCK_DGRAM, 0)) < 0)
@@ -307,7 +307,16 @@ OpenAndConfSSDPNotifySocket(in_addr_t addr)
 		return -1;
 	}
 
-	mc_if.s_addr = addr;	/*inet_addr(addr);*/
+#ifndef HAVE_IP_MREQN
+	mc_if.s_addr = lan_addr->addr.s_addr;	/*inet_addr(addr);*/
+#else	/* HAVE_IP_MREQN */
+	mc_if.imr_address.s_addr = lan_addr->addr.s_addr;	/*inet_addr(addr);*/
+#ifdef ENABLE_IPV6
+	mc_if.imr_ifindex = lan_addr->index;
+#else	/* ENABLE_IPV6 */
+	mc_if.imr_ifindex = if_nametoindex(lan_addr->ifname);
+#endif	/* ENABLE_IPV6 */
+#endif	/* HAVE_IP_MREQN */
 
 	if(setsockopt(s, IPPROTO_IP, IP_MULTICAST_LOOP, (char *)&loopchar, sizeof(loopchar)) < 0)
 	{
@@ -340,15 +349,15 @@ OpenAndConfSSDPNotifySocket(in_addr_t addr)
 	 * an unbound socket)
 	 * here it is used to se a specific sending address */
 	memset(&sockname, 0, sizeof(struct sockaddr_in));
-    sockname.sin_family = AF_INET;
-    sockname.sin_addr.s_addr = addr;	/*inet_addr(addr);*/
+	sockname.sin_family = AF_INET;
+	sockname.sin_addr.s_addr = lan_addr->addr.s_addr;	/*inet_addr(addr);*/
 
-    if (bind(s, (struct sockaddr *)&sockname, sizeof(struct sockaddr_in)) < 0)
+	if (bind(s, (struct sockaddr *)&sockname, sizeof(struct sockaddr_in)) < 0)
 	{
 		syslog(LOG_ERR, "bind(udp_notify): %m");
 		close(s);
 		return -1;
-    }
+	}
 
 	return s;
 }
@@ -357,7 +366,7 @@ OpenAndConfSSDPNotifySocket(in_addr_t addr)
 /* open the UDP socket used to send SSDP notifications to
  * the multicast group reserved for them. IPv6 */
 static int
-OpenAndConfSSDPNotifySocketIPv6(unsigned int if_index)
+OpenAndConfSSDPNotifySocketIPv6(struct lan_addr_s * lan_addr)
 {
 	int s;
 	unsigned int loop = 0;
@@ -372,9 +381,9 @@ OpenAndConfSSDPNotifySocketIPv6(unsigned int if_index)
 		syslog(LOG_ERR, "socket(udp_notify IPv6): %m");
 		return -1;
 	}
-	if(setsockopt(s, IPPROTO_IPV6, IPV6_MULTICAST_IF, &if_index, sizeof(if_index)) < 0)
+	if(setsockopt(s, IPPROTO_IPV6, IPV6_MULTICAST_IF, &lan_addr->index, sizeof(lan_addr->index)) < 0)
 	{
-		syslog(LOG_ERR, "setsockopt(udp_notify IPv6, IPV6_MULTICAST_IF, %u): %m", if_index);
+		syslog(LOG_ERR, "setsockopt(udp_notify IPv6, IPV6_MULTICAST_IF, %u): %m", lan_addr->index);
 		close(s);
 		return -1;
 	}
@@ -423,7 +432,7 @@ OpenAndConfSSDPNotifySockets(int * sockets)
 	    lan_addr != NULL;
 	    lan_addr = lan_addr->list.le_next)
 	{
-		sockets[i] = OpenAndConfSSDPNotifySocket(lan_addr->addr.s_addr);
+		sockets[i] = OpenAndConfSSDPNotifySocket(lan_addr);
 		if(sockets[i] < 0)
 			goto error;
 		i++;
@@ -434,7 +443,7 @@ OpenAndConfSSDPNotifySockets(int * sockets)
 		}
 		else
 		{
-			sockets[i] = OpenAndConfSSDPNotifySocketIPv6(lan_addr->index);
+			sockets[i] = OpenAndConfSSDPNotifySocketIPv6(lan_addr);
 			if(sockets[i] < 0)
 				goto error;
 		}
@@ -1405,10 +1414,10 @@ SendSSDPGoodbye(int * sockets, int n_sockets)
 	int ret = 0;
 	const char * dest_str;
 
-    memset(&sockname4, 0, sizeof(struct sockaddr_in));
-    sockname4.sin_family = AF_INET;
-    sockname4.sin_port = htons(SSDP_PORT);
-    sockname4.sin_addr.s_addr = inet_addr(SSDP_MCAST_ADDR);
+	memset(&sockname4, 0, sizeof(struct sockaddr_in));
+	sockname4.sin_family = AF_INET;
+	sockname4.sin_port = htons(SSDP_PORT);
+	sockname4.sin_addr.s_addr = inet_addr(SSDP_MCAST_ADDR);
 #ifdef ENABLE_IPV6
 	memset(&sockname6, 0, sizeof(struct sockaddr_in6));
 	sockname6.sin6_family = AF_INET6;
@@ -1463,7 +1472,7 @@ SendSSDPGoodbye(int * sockets, int n_sockets)
 				                      known_service_types[i].uuid, "",	/* NT: */
 				                      known_service_types[i].uuid, "", ""); /* ver_str, USN: */
 			}
-    	}
+		}
 	}
 	return ret;
 }
